--- a/public/index.html
+++ b/public/index.html
@@ -15,21 +15,14 @@
       <h1>title</h1>
     </header>
     <main>
-      <input
-        type="text"
-        id="campo"
-        autocomplete="off"
-        placeholder="write"
-      />
+      <input type="text" id="campo" autocomplete="off" placeholder="write" />
       <button id="btn-add-tarefa" aria-label="Adicionar tarefa">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
           <path fill="white" d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4z" />
         </svg>
       </button>
 
-      <button id="enviar">
-        enviar
-      </button>
+      <button id="enviar">enviar</button>
 
       <div id="tarefas">
         <ul id="ul"></ul>
